@@ -1,3 +1,8 @@
+2012-03-22  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/52487
+	* g++.dg/cpp0x/lambda/lambda-ice7.C: New.
+
 2012-03-22  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/52452
@@ -27,7 +32,7 @@
 	* gcc.target/avr/torture/addr-space-2-0.h: New test.
 	* gcc.target/avr/torture/addr-space-2-1.h: New test.
 	* gcc.target/avr/torture/addr-space-2-x.h: New test.
-	
+
 	Backport from 2012-03-12 mainline r185255.
 
 	PR target/49868
