@@ -1,3 +1,9 @@
+2012-03-22  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/52487
+	* class.c (check_field_decls): Call literal_type_p only
+	on complete types.
+
 2012-03-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/52671
